# fireEngine

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
assets/ClothBanner/: ClothBanner.gltf
assets/ClothSheet/: ClothSheet.gltf
assets/physics_demos/: CompoundDemo.gltf  ConvexHullDemo.gltf  FallRestDemo.gltf  FrictionRampDemo.gltf  RestitutionDemo.gltf  SleepDemo.gltf  StackDemo.gltf  StaticMeshDemo.gltf  ToppleDemo.gltf  generate.py
cmake/: check_graphics_layering.cmake  fireengine_imgui.cmake
include/fire_engine/: fire_engine.hpp
include/fire_engine/animation/: animation.hpp  animation_selection.hpp
include/fire_engine/collision/: aabb.hpp  aabb_bvh.hpp  broad_phase.hpp  collider.hpp  collider_id.hpp  contact_manifold.hpp  dynamic_aabb_tree_broad_phase.hpp  end_point.hpp  geometry.hpp  gjk_epa.hpp  narrow_phase.hpp  ray.hpp  shape_cast.hpp  support.hpp  sweep_and_prune_broad_phase.hpp  world_shape.hpp
include/fire_engine/core/: convex_hull_builder.hpp  gltf_loader.hpp  shader_loader.hpp  tangent_generator.hpp
include/fire_engine/graphics/: bounds.hpp  cloth.hpp  colour3.hpp  draw_command.hpp  frame_info.hpp  frustum.hpp  geometry.hpp  gpu_limits.hpp  material.hpp  material_binding.hpp  object.hpp  particle.hpp  skin.hpp  vertex.hpp
include/fire_engine/input/: input.hpp
include/fire_engine/math/: constants.hpp  mat3.hpp  mat4.hpp  quaternion.hpp  vec4.hpp  vec_base.hpp  view_basis.hpp
include/fire_engine/physics/: articulation.hpp  articulation_contact.hpp  character_controller.hpp  collider_shape.hpp  collision_event.hpp  constraint_body.hpp  contact.hpp  contact_solver.hpp  island.hpp  joint.hpp  joint_solver.hpp  physics_body.hpp  physics_constants.hpp  physics_handle.hpp  physics_query.hpp  physics_world.hpp  solver_math.hpp  spatial.hpp
include/fire_engine/platform/: application_args.hpp  keyboard.hpp  mouse.hpp  window.hpp
include/fire_engine/render/: compute_pipeline.hpp  compute_self_test.hpp  constants.hpp  cubemap_basis.hpp  debug_draw.hpp  debug_overlay.hpp  descriptor_bindings.hpp  descriptors.hpp  device.hpp  environment_precompute.hpp  frame.hpp  gpu_profiler.hpp  particle_system.hpp  pipeline.hpp  post_processing.hpp  render_context.hpp  render_pass.hpp  render_target.hpp  render_tunables.hpp  renderer.hpp  resources.hpp  shadows.hpp  soft_body_system.hpp  ssao.hpp  swapchain.hpp  taa.hpp  transmission.hpp  ubo.hpp  viewport.hpp
include/fire_engine/scene/: animator.hpp  camera.hpp  components.hpp  empty.hpp  light.hpp  mesh.hpp  node.hpp  node_format.hpp  ragdoll.hpp  (+4 more)
shaders/: cloth_collide.comp  cloth_finalize.comp  cloth_predict.comp  cloth_solve.comp  compute_selftest.comp  debug_line.frag  debug_line.vert  depth_prepass.frag  particle.frag  particle.vert  particle_simulate.comp  self_shadow_second.frag  shader.frag  shader.vert  shadow.frag  shadow.vert  skybox.frag  ssao.frag  ssao_blur.frag  taa.frag
src/: fire_engine.cpp
src/animation/: animation.cpp
src/collision/: collider.cpp  dynamic_aabb_tree_broad_phase.cpp  geometry.cpp  gjk_epa.cpp  narrow_phase.cpp  ray.cpp  shape_cast.cpp  sweep_and_prune_broad_phase.cpp
src/core/: convex_hull_builder.cpp  gltf_loader.cpp  gltf_loader_animation.cpp  gltf_loader_assets.cpp  gltf_loader_extras.cpp  gltf_loader_geometry.cpp  gltf_loader_images.cpp  gltf_loader_material.cpp  gltf_loader_mesh.cpp  gltf_loader_nodes.cpp  gltf_loader_scene.cpp  shader_loader.cpp  tangent_generator.cpp
src/graphics/: cloth.cpp  geometry.cpp  image.cpp  ktx_image.cpp  material_binding.cpp  object.cpp
src/input/: input.cpp
src/physics/: articulation.cpp  articulation_contact.cpp  character_controller.cpp  contact_solver.cpp  island.cpp  joint_solver.cpp  physics_body.cpp  physics_world.cpp
src/platform/: application.cpp  keyboard.cpp  mouse.cpp  window.cpp
src/render/: compute_pipeline.cpp  compute_self_test.cpp  debug_draw.cpp  debug_overlay.cpp  descriptors.cpp  device.cpp  environment_precompute.cpp  frame.cpp  gpu_profiler.cpp  particle_system.cpp  pipeline.cpp  post_processing.cpp  render_context.cpp  render_pass.cpp  render_target.cpp  renderer.cpp  resources.cpp  shadows.cpp  soft_body_system.cpp  ssao.cpp  swapchain.cpp  taa.cpp  transmission.cpp
src/scene/: animator.cpp  camera.cpp  empty.cpp  light.cpp  mesh.cpp  node.cpp  particle_emitter.cpp  ragdoll.cpp  scene_culler.cpp  scene_graph.cpp
tests/animation/: test_animation.cpp
tests/collision/: test_aabb.cpp  test_aabb_bvh.cpp  test_dynamic_aabb_tree_broad_phase.cpp  test_geometry.cpp  test_gjk_epa.cpp  test_narrow_phase.cpp  test_shape_cast.cpp  test_support.cpp  test_sweep_and_prune_broad_phase.cpp
tests/core/: test_convex_hull_builder.cpp  test_gltf_loader.cpp  test_shader_loader.cpp  test_system.cpp  test_tangent_generator.cpp
tests/graphics/: test_assets.cpp  test_bounds.cpp  test_cloth.cpp  test_colour3.cpp  test_draw_command.cpp  test_frame_info.cpp  test_frustum.cpp  test_geometry.cpp  test_gpu_handle.cpp  test_image.cpp  test_joints4.cpp  test_ktx_image.cpp  test_material.cpp  test_sampler_settings.cpp  test_skin.cpp  test_texture.cpp  test_vertex.cpp
tests/input/: test_animation_state.cpp  test_camera_state.cpp  test_controller_state.cpp  test_input_state.cpp  test_variant_state.cpp
tests/math/: test_mat3.cpp  test_mat4.cpp  test_quaternion.cpp  test_vec2.cpp  test_vec3.cpp  test_vec4.cpp
tests/physics/: test_articulation.cpp  test_character_controller.cpp  test_collision_events.cpp  test_compound.cpp  test_contact_solver.cpp  test_demos.cpp  test_island.cpp  test_joint.cpp  test_physics_determinism.cpp  test_physics_handle.cpp  test_physics_query.cpp  test_physics_world.cpp  test_static_mesh.cpp
tests/platform/: test_application_args.cpp
tests/render/: test_compute_pipeline_config.cpp  test_pipeline_config.cpp  test_ubo.cpp
tests/scene/: test_animator.cpp  test_camera.cpp  test_controllable.cpp  test_formatter.cpp  test_light.cpp  test_node.cpp  test_particle_emitter.cpp  test_ragdoll.cpp  test_scene_culler.cpp  test_scene_graph.cpp  test_transform.cpp
tests/support/: state_hash.hpp  test_traits.hpp
